Give more flexibility to the data parsing regex

--- a/test/index.html
+++ b/test/index.html
@@ -72,7 +72,7 @@
                     name: 'Very Long Name',
                     type: 'data',
                     unit: 0.5,
-                    data: 'd2d4d1zd2hlh2l2d2l2h2d2h4l2d2x2hzlzh',
+                    data: 'd2 d4 d1 z d2 h l h2 l2 d2 l2 h2 d2 h4 l2 d2 x2 h z l z h',
                     labels: [
                         'AAAA',
                         'B',
